palying with ipc

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1>Hello!</h1>
+	<button id="errorBtn">Display Error</button>
 	<script>
 		require('./js/index.js');
 	</script>
